--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>My Portfolio</title>
 </head>
 <body>
     <header>
-        <nav class="nav-bar">
-            <div class="logo">
-                <img src="images/logo2.png" alt=" developer initial">
-            </div>
 
-            <div class="Menu-nav">
-                <ul>
-                    <a href="/A propos"><li>Qui suis-je?</li></a>
-                    <a href="/Competences"><li>Competences</li></a>
-                    <a href="/Projets"><li>Projets</li></a>
-                    <a href="/contacts"><li><img src="images/icon1.png" alt="icon contact"></li></a>
+        <div class="logo">
+          <a href="#"> <img src="images/logo.png" alt=" developer initial"> </a> 
+        </div>
+
+        <nav class="nav-bar">    
+            <div class="menu-nav">
+                    <ul>
+                    <li><a href="#About">Qui suis-je?</a></li>
+                    <li><a href="#Competences">Competences</a></li>
+                    <li><a href="#Projets">Projets</a></li>
+                    <li><a href="#contacts"><img src="images/icon1.png" alt="icon contact"></a></li>
                 </ul>
-            </div>
             </div>
         </nav>
     </header>
