--- a/index.html
+++ b/index.html
@@ -24,6 +24,40 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="contenair">
+
+            <div class="mot">
+              <p>Hello! c'est Hirche Jaime BALANDISSA</p>
+             <p> Je suis <span class="typeWriter" data-text='["Developpeur Full-Stack Junior", " à la recherche alternance"]'></span></p>
+            </div>
+
+         <div class="button">
+            <a href="#decouverte" class="gauche">Mes acquis & realisations</a>
+            <a href="images/CvAlternance.pdf" downlaod target="_blank" class="droite">Telecharger mon CV</a>
+        </div>
+        </div>
+        <!-- <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> -->
+        <script src ="https://cdn.jsdelivr.net/npm/typelighterjs/typelighter.min.js"></script>
+        <script src="js/script.js"></script>
     </header>
+
+<section class="body" id="About">
+    ''
+    <div class="moi">
+        <img src="images/moi.jpg" alt="moi">
+    </div>
+
+    <div class="me">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus est rem dolores 
+        quidem fuga nisi, vitae error saepe, eos esse at minima praesentium placeat dolorem expedita 
+        ipsam dolore, ad voluptatum?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quo aut culpa ipsum commodi. 
+        Sapiente similique, dolores, iusto, tenetur
+        amet facere asperiores perspiciatis commodi deleniti excepturi autem officiis quam? Ut!</p>
+    </div>
+
+</section>
+     
 </body>
 </html>
