--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="nav-bar">    
             <div class="menu-nav">
                     <ul>
-                    <li><a href="#About">Qui suis-je?</a></li>
-                    <li><a href="#Competences">Competences</a></li>
-                    <li><a href="#Projets">Projets</a></li>
+                    <li><a href="#about">Qui suis-je?</a></li>
+                    <li><a href="#competences">Competences</a></li>
+                    <li><a href="#projets">Projets</a></li>
                     <li><a href="#contacts"><img src="images/icon1.png" alt="icon contact"></a></li>
                 </ul>
             </div>
@@ -29,7 +29,7 @@
 
             <div class="mot">
               <p>Hello! c'est Hirche Jaime BALANDISSA</p>
-             <p> Je suis <span class="typeWriter" data-text='["Developpeur Full-Stack Junior", " à la recherche alternance"]'></span></p>
+             <p> Je suis <span class="typeWriter" data-text='["Developpeur Full-Stack Junior", " à la recherche d&apos;une alternance"]'></span></p>
             </div>
 
          <div class="button">
@@ -42,8 +42,9 @@
         <script src="js/script.js"></script>
     </header>
 
-<section class="body" id="About">
-    ''
+<section  id="about">
+    <h2 class="h">Qui suis-je?</h2>
+    <div class="body">
     <div class="moi">
         <img src="images/moi.jpg" alt="moi">
     </div>
@@ -54,8 +55,65 @@
         ipsam dolore, ad voluptatum?
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quo aut culpa ipsum commodi. 
         Sapiente similique, dolores, iusto, tenetur
-        amet facere asperiores perspiciatis commodi deleniti excepturi autem officiis quam? Ut!</p>
+        amet facere asperiores perspiciatis commodi deleniti excepturi autem officiis quam? Ut!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus est rem dolores 
+        quidem fuga nisi, vitae error saepe, eos esse at minima praesentium placeat dolorem expedita 
+        ipsam dolore, ad voluptatum?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quo aut culpa ipsum commodi. 
+        Sapiente similique, dolores, iusto, tenetur
+        amet facere asperiores perspiciatis commodi deleniti excepturi autem officiis quam? Ut!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus est rem dolores 
+        quidem fuga nisi, vitae error saepe, eos esse at minima praesentium placeat dolorem expedita 
+        ipsam dolore, ad voluptatum?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quo aut culpa ipsum commodi. 
+        Sapiente similique, dolores, iusto, tenetur
+        amet facere asperiores perspiciatis commodi deleniti excepturi autem officiis quam? Ut!
+    </p>
     </div>
+    </div>
+
+   <div class="tout" id="decouverte">
+    <main class="corp" id="competences">
+        <h2 class="h">Mes Competences</h2>
+
+        <div class="main">
+
+        <div class="bloc">
+
+            <h5 class="h"> Front-End</h5>
+
+            <div class="bloc-img">
+               <img src="images/js.png" alt="">
+               <img src="images/react.png" alt="">
+               <img src="images/css.png" alt="">
+               <img src="images/html.png" alt="">
+               <img src="images/b.png" alt="">
+            </div>
+
+        </div>
+
+        <div class="block">
+
+            <h5 class="h">Back-End</h5>
+
+            <div class="bloc-img">
+                <img src="images/php.png" alt="">
+                <img src="images/node.png" alt="">
+                <img src="images/ts.png" alt="">
+                <img src="images/.png" alt="">
+                <img src="images/b.png" alt="">
+             </div>
+       
+        </div> 
+
+        </div>
+        </div>
+    </main>
+        <section class="projets" id="projets">
+
+        </section>
+
+   </div>
 
 </section>
      
